--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+}
+
 .container {
   display: -ms-grid;
   display: grid;
@@ -13,6 +22,39 @@
   -ms-grid-column: 1;
   grid-column: 1;
   grid-row: 1 / -1;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  justify-items: start;
+  -ms-grid-rows: 1fr 3fr 6fr;
+      grid-template-rows: 1fr 3fr 6fr;
+}
+
+.container aside h1 {
+  font-size: 30px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.container aside li {
+  font-size: 20px;
+}
+
+.container aside h1, .container aside li {
+  padding: 10px 30px;
+  font-weight: bold;
+}
+
+.container aside h1 i, .container aside li i {
+  margin-right: 20px;
+}
+
+.container aside a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .container header {
