--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,14 @@ $grey: #e2e8f0;
     align-items: center;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: sans-serif;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -19,6 +27,32 @@ $grey: #e2e8f0;
         background-color: $accent-color;
         grid-column: 1;
         grid-row: 1 / -1;
+        display: grid;
+        align-items: start;
+        justify-items: start;
+        grid-template-rows: 1fr 3fr 6fr;
+        
+        h1 {
+            font-size: 30px;
+            align-self: center;
+        }
+
+        li {
+            font-size: 20px;
+        }
+
+        h1, li {
+            padding: 10px 30px;
+            font-weight: bold;
+            i {
+                margin-right: 20px;
+            }
+        }
+
+        a {
+            color: $white;
+            text-decoration: none;
+        }
     }
 
     header {
