--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@ body {
   font-family: sans-serif;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 .container {
   display: -ms-grid;
   display: grid;
@@ -30,6 +34,7 @@ body {
   justify-items: start;
   -ms-grid-rows: 1fr 3fr 6fr;
       grid-template-rows: 1fr 3fr 6fr;
+  z-index: 2;
 }
 
 .container aside h1 {
@@ -60,6 +65,106 @@ body {
 .container header {
   background-color: #fff;
   grid-column: 2 / -1;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  z-index: 1;
+  font-size: 18px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1.5fr 1fr;
+      grid-template-columns: 1.5fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 0;
+}
+
+.container header > div {
+  padding: 0 40px;
+}
+
+.container header img {
+  border-radius: 50%;
+  background-color: #f0b42a;
+}
+
+.container header .searchbar {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 8fr;
+      grid-template-columns: 1fr 8fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container header .searchbar input {
+  border: none;
+  background-color: #e2e8f0;
+  border-radius: 20px;
+  padding: 8px 20px;
+}
+
+.container header .user-info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 3fr;
+      grid-template-columns: 1fr 1fr 3fr;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container header .user-info img {
+  width: 40px;
+  height: 40px;
+}
+
+.container header .post-buttons {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+  padding-left: 0;
+}
+
+.container header .post-buttons button {
+  background-color: #1992d4;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+}
+
+.container header .user-greeting {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+      grid-template-columns: 1fr 4fr;
+}
+
+.container header .user-greeting img {
+  width: 70px;
+  height: 70px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / span 2;
+}
+
+.container header .user-greeting .hi {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.container header .user-greeting .user-name {
+  grid-column: 2 / -1;
+  font-weight: bold;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
 }
 
 .container main {
