--- a/styles/style.css
+++ b/styles/style.css
@@ -170,5 +170,36 @@ button:hover {
 .container main {
   background-color: #e2e8f0;
   grid-column: 2 / -1;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2.5fr 1fr;
+      grid-template-columns: 2.5fr 1fr;
+  gap: 20px;
+  padding: 30px;
+}
+
+.container main .projects {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / span 2;
+}
+
+.container main .projects h2 {
+  grid-column: 1 / -1;
+}
+
+.container main .projects .projects-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  height: 100%;
+  padding: 20px 0;
+}
+
+.container main .projects article {
+  background-color: #fff;
+  padding: 20px;
 }
 /*# sourceMappingURL=style.css.map */
