--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,11 @@
 
 body {
   font-family: sans-serif;
+  color: #8d8d8d;
+}
+
+h1, h2, h3 {
+  color: black;
 }
 
 button:hover {
@@ -77,6 +82,7 @@ button:hover {
       -ms-flex-align: center;
           align-items: center;
   padding: 10px 0;
+  color: black;
 }
 
 .container header > div {
@@ -174,18 +180,21 @@ button:hover {
   display: grid;
   -ms-grid-columns: 2.5fr 1fr;
       grid-template-columns: 2.5fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
   gap: 20px;
   padding: 30px;
+}
+
+.container main h2 {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .container main .projects {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / span 2;
-}
-
-.container main .projects h2 {
-  grid-column: 1 / -1;
 }
 
 .container main .projects .projects-container {
@@ -198,8 +207,119 @@ button:hover {
   padding: 20px 0;
 }
 
-.container main .projects article {
+.container main .projects .projects-container article {
   background-color: #fff;
+  border-radius: 15px;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   padding: 20px;
+  border-left: 10px solid #f0b42a;
+  display: -ms-grid;
+  display: grid;
+}
+
+.container main .projects .projects-container article h3 {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.container main .projects .projects-container article p {
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
+.container main .projects .projects-container article .project-icons {
+  -ms-grid-column-align: end;
+      justify-self: end;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  color: black;
+}
+
+.container main .announcements {
+  font-size: 13px;
+}
+
+.container main .announcements .announcements-container {
+  background-color: #fff;
+  border-radius: 15px;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  margin-top: 20px;
+}
+
+.container main .announcements .announcements-container article {
+  border-bottom: 1px solid #e2e8f0;
+  padding: 10px;
+}
+
+.container main .announcements .announcements-container article:last-child {
+  border: none;
+}
+
+.container main .announcements .announcements-container article h3 {
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 1.5;
+}
+
+.container main .trending {
+  font-size: 13px;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+.container main .trending .trending-container {
+  background-color: #fff;
+  border-radius: 15px;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.container main .trending .trending-container ul {
+  display: -ms-grid;
+  display: grid;
+  gap: 20px;
+}
+
+.container main .trending .trending-container ul li {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 3fr;
+      grid-template-columns: 1fr 3fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container main .trending .trending-container ul li img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  margin-right: 10px;
+}
+
+.container main .trending .trending-container ul li .user-handle {
+  font-weight: bold;
+  color: black;
 }
 /*# sourceMappingURL=style.css.map */
