--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,7 @@ $accent-color: #1992d4;
 $secondary-color: #f0b42a;
 $white: #fff;
 $grey: #e2e8f0;
+$dark-grey: #8d8d8d;
 
 @mixin flex-center {
     display: flex;
@@ -15,6 +16,11 @@ $grey: #e2e8f0;
 
 body {
     font-family: sans-serif;
+    color: $dark-grey;
+}
+
+h1, h2, h3 {
+    color: black;
 }
 
 button:hover {
@@ -70,6 +76,7 @@ button:hover {
         grid-template-columns: 1.5fr 1fr;
         align-items: center;
         padding: 10px 0;
+        color: black;
 
         > div {
             padding: 0 40px;
@@ -142,20 +149,28 @@ button:hover {
         }
     }
 
+    @mixin card {
+        background-color: $white;
+        border-radius: 15px;
+        box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.2);
+    }
+
     main {
         background-color: $grey;
         grid-column: 2 / -1;
         display: grid;
         grid-template-columns: 2.5fr 1fr;
+        grid-template-rows: 1fr 1fr;
         gap: 20px;
         padding: 30px;
 
+        h2 {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
         .projects {
             grid-row: 1 / span 2;
-
-            h2 {
-                grid-column: 1 / -1;
-            }
 
             .projects-container {
                 display: grid;
@@ -163,13 +178,99 @@ button:hover {
                 gap: 20px;
                 height: 100%;
                 padding: 20px 0;
-            }
 
-            article {
-                background-color: $white;
-                padding: 20px;
+                article {
+                    @include card();
+                    padding: 20px;
+                    border-left: 10px solid $secondary-color;
+                    display: grid;
+
+                    h3 {
+                        font-weight: bold;
+                        font-size: 18px;
+                        line-height: 2;
+                        align-self: center;
+                    }
+
+                    p {
+                        align-self: start;
+                    }
+
+                    .project-icons {
+                        justify-self: end;
+                        display: grid;
+                        grid-template-columns: repeat(3, 1fr);
+                        gap: 30px;
+                        color: black;
+                    }
+                }
             }
         }
+        
+        .announcements {
+            font-size: 13px;
+
+            .announcements-container {
+                @include card();
+                padding: 20px;
+                display: grid;
+                grid-template-rows: repeat(3, 1fr);
+                margin-top: 20px;
+    
+                article {
+                    border-bottom: 1px solid $grey;
+                    padding: 10px;
+    
+                    &:last-child {
+                        border: none;
+                    }
+
+                    h3 {
+                        font-size: 15px;
+                        font-weight: bold;
+                        line-height: 1.5;
+                    }
+                }
+            }
+        }
+
+        .trending {
+            font-size: 13px;
+            align-self: end;
+
+            .trending-container {
+                @include card();
+                padding: 20px;
+                margin-top: 20px;
+
+                ul {
+                    display: grid;
+                    gap: 20px;
+
+                    li {
+                        display: grid;
+                        grid-template-columns: 1fr 3fr;
+                        align-items: center;
+
+                        img {
+                            border-radius: 50%;
+                            width: 50px;
+                            height: 50px;
+                            grid-row: 1 / 3;
+                            margin-right: 10px;
+                        }
+
+                        .user-handle {
+                            font-weight: bold;
+                            color: black;
+                        }
+                    }
+                    
+
+                }
+            }
+        }
+
     }
 }
 
