--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #8d8d8d;
 }
 
@@ -27,7 +28,7 @@ button:hover {
 }
 
 .container aside {
-  background-color: #1992d4;
+  background-color: #0d9488;
   -ms-grid-column: 1;
   grid-column: 1;
   grid-row: 1 / -1;
@@ -91,7 +92,7 @@ button:hover {
 
 .container header img {
   border-radius: 50%;
-  background-color: #f0b42a;
+  background-color: #f97316;
 }
 
 .container header .searchbar {
@@ -137,11 +138,17 @@ button:hover {
 }
 
 .container header .post-buttons button {
-  background-color: #1992d4;
+  background-color: #0d9488;
   color: #fff;
   border: none;
   padding: 10px;
   border-radius: 30px;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.container header .post-buttons button:hover {
+  background-color: #0f766e;
 }
 
 .container header .user-greeting {
@@ -213,7 +220,7 @@ button:hover {
   -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
           box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  border-left: 10px solid #f0b42a;
+  border-left: 10px solid #f97316;
   display: -ms-grid;
   display: grid;
 }
@@ -242,6 +249,16 @@ button:hover {
       grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   color: black;
+}
+
+.container main .projects .projects-container article .project-icons i {
+  -webkit-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+}
+
+.container main .projects .projects-container article .project-icons i:hover {
+  cursor: pointer;
+  color: #8d8d8d;
 }
 
 .container main .announcements {
