--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,8 +1,11 @@
-$accent-color: #1992d4;
-$secondary-color: #f0b42a;
+$accent-color: #0d9488;
+$dark-accent-color: #0f766e;
+$secondary-color: #f97316;
 $white: #fff;
 $grey: #e2e8f0;
 $dark-grey: #8d8d8d;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 @mixin flex-center {
     display: flex;
@@ -15,7 +18,7 @@ $dark-grey: #8d8d8d;
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: $dark-grey;
 }
 
@@ -124,6 +127,11 @@ button:hover {
                 border: none;
                 padding: 10px;
                 border-radius: 30px;
+                transition: background-color 0.3s ease-in-out;
+
+                &:hover {
+                    background-color: $dark-accent-color;
+                }
             }
         }
 
@@ -202,6 +210,15 @@ button:hover {
                         grid-template-columns: repeat(3, 1fr);
                         gap: 30px;
                         color: black;
+
+                        i {
+                            transition: color 0.2s ease-in-out;
+
+                            &:hover {
+                                cursor: pointer;
+                                color: $dark-grey;
+                            }
+                        }
                     }
                 }
             }
